[workspace]
resolver = "2"
members = [
    #"benchmarks",
    "commons/stest",
    "commons/bcs_ext",
    "commons/decrypt",
    "commons/logger",
    "commons/scmd",
    "commons/metrics",
    "commons/utils",
    "commons/service-registry",
    "commons/timeout-join-handler",
    "commons/serde-helpers",
    "commons/stream-task",
    "commons/api-limiter",
    "commons/accumulator",
    "commons/forkable-jellyfish-merkle",
    "commons/time-service",
    "commons/infallible",
    "types",
    "types/uint",
    "genesis",
    "state/api",
    "state/state-tree",
    "state/statedb",
    "state/state-store-api",
    "state/service",
    "config",
    "storage",
    "consensus",
    "consensus/cryptonight-rs",
    "testsuite",
    "txpool",
    "txpool/api",
    "txpool/mock-service",
    "executor",
    "executor/benchmark",
    "contrib-contracts",
    "chain",
    "chain/api",
    "chain/open-block",
    "chain/force-upgrade",
    "chain/mock",
    "chain/chain-notify",
    "chain/service",
    "node/api",
    "node",
    "sync",
    "sync/api",
    "block-relayer",
    "miner",
    "node",
    "network-p2p",
    "network-p2p/types",
    "network-p2p/peerset",
    "network",
    "network/types",
    "network/api",
    "network-rpc",
    "network-p2p/derive",
    "network-p2p/core",
    "network-rpc/api",
    "account/api",
    "account",
    "account/service",
    "account/provider",
    "rpc/api",
    "rpc/middleware",
    "rpc/client",
    "rpc/server",
    "vm/types",
    "vm/vm-runtime",
    "vm/natives",
    "vm/stdlib",
    "vm/compiler",
    "vm/move-prover",
    "vm/mvhashmap",
    "vm/parallel-executor",
    "vm/transaction-builder",
    "vm/transaction-builder-generator",
    "vm/move-coverage",
    "vm/resource-viewer",
    "vm/starcoin-gas",
    "vm/dev",
    "vm/gas-algebra-ext",
    "vm/move-explain",
    "vm/move-package-manager",
    "vm/vm-status-translator",
    "vm/starcoin-transactional-test-harness",
    "vm/parallel-executor",
    "vm/transaction-benchmarks",
    "vm/e2e-tests",
    "vm/proptest-helpers",
    "vm2/executor",
    "vm2/genesis",
    "vm2/test-helper",
    "vm2/chain",
    "vm2/rpc",
    "abi/types",
    "abi/decoder",
    "abi/resolver",
    "test-helper",
    "cmd/starcoin",
    "cmd/faucet",
    "cmd/tx-factory",
    "cmd/miner_client",
    #"cmd/generator",
    "dataformat-generator",
    "cmd/resource-exporter",
    "cmd/merkle-generator",
    #"cmd/peer-watcher",
    "cmd/airdrop",
    #"cmd/replay",
    "stratum",
    "cmd/miner_client/api",
    #"cmd/db-exporter",
    "cmd/genesis-nft-miner",
]

default-members = [
    #"benchmarks",
    "commons/stest",
    "commons/bcs_ext",
    "commons/decrypt",
    "commons/logger",
    "commons/scmd",
    "commons/metrics",
    "commons/utils",
    "commons/service-registry",
    "commons/timeout-join-handler",
    "commons/serde-helpers",
    "commons/stream-task",
    "commons/api-limiter",
    "commons/accumulator",
    "commons/forkable-jellyfish-merkle",
    "commons/infallible",
    "types",
    "types/uint",
    "genesis",
    "state/api",
    "state/state-tree",
    "state/statedb",
    "state/state-store-api",
    "state/service",
    "config",
    "storage",
    "consensus",
    "consensus/cryptonight-rs",
    "testsuite",
    "txpool",
    "txpool/api",
    "txpool/mock-service",
    "executor",
    "executor/benchmark",
    "contrib-contracts",
    "chain",
    "chain/api",
    "chain/open-block",
    "chain/force-upgrade",
    "chain/mock",
    "chain/chain-notify",
    "chain/service",
    "node/api",
    "node",
    "sync",
    "sync/api",
    "block-relayer",
    "miner",
    "node",
    "network-p2p",
    "network-p2p/types",
    "network-p2p/peerset",
    "network",
    "network/api",
    "network-rpc",
    "network-p2p/derive",
    "network-p2p/core",
    "network-rpc/api",
    "account/api",
    "account",
    "account/service",
    "rpc/api",
    "rpc/middleware",
    "rpc/client",
    "rpc/server",
    "vm/types",
    "vm/vm-runtime",
    "vm/natives",
    "vm/stdlib",
    "vm/compiler",
    "vm/move-prover",
    "vm/mvhashmap",
    "vm/parallel-executor",
    "vm/transaction-builder",
    "vm/transaction-builder-generator",
    "vm/move-coverage",
    "vm/resource-viewer",
    "vm/starcoin-gas",
    "vm/dev",
    "vm/gas-algebra-ext",
    "vm/move-explain",
    "vm/move-package-manager",
    "vm/vm-status-translator",
    "vm/starcoin-transactional-test-harness",
    "vm2/chain",
    "vm2/executor",
    "vm2/genesis",
    "vm2/test-helper",
    "vm2/rpc",
    "abi/types",
    "abi/decoder",
    "abi/resolver",
    "test-helper",
    "cmd/starcoin",
    "cmd/faucet",
    "cmd/tx-factory",
    "cmd/miner_client",
    #"cmd/generator",
    "dataformat-generator",
    "cmd/resource-exporter",
    "cmd/merkle-generator",
    #"cmd/peer-watcher",
    "cmd/airdrop",
    #"cmd/replay",
    "cmd/genesis-nft-miner",
    "stratum",
    "cmd/miner_client/api",
    #"cmd/db-exporter",
]

[profile.dev]
panic = "unwind"

[profile.release]
debug = false
panic = "unwind"
debug-assertions = false
codegen-units = 1

[workspace.package]
authors = ["Starcoin Core Dev <dev@starcoin.org>"]
edition = "2021"
homepage = "https://starcoin.org"
license = "Apache-2.0"
publish = false
repository = "https://github.com/starcoinorg/starcoin"
rust-version = "1.64"
version = "1.13.19"

[workspace.dependencies]
actix = "0.13"
actix-rt = "2.6"
aes-gcm = "0.9"
anyhow = "~1"
api-limiter = { path = "commons/api-limiter" }
arc-swap = "1.5.1"
arrayref = "0.3"
ascii = "1.0.0"
async-std = "1.12"
async-trait = "0.1.53"
asynchronous-codec = "0.5"
atomic-counter = "1.0.1"
atty = "0.2.14"
backtrace = "0.3"
bcs = "0.1"
bcs-ext = { path = "commons/bcs_ext" }
bech32 = "0.9"
bencher = "0.1.5"
bitflags = "1.3.2"
bs58 = "0.3.1"
byteorder = "1.3.4"
bytes = "1"
chrono = { version = "0.4.19", default-features = false, features = ["clock"] }
clap = { version = "3", features = ["derive"] }
cli-table = "0.3.2"
coarsetime = "0.1.22"
codespan = { version = "0.8.0", features = ["serialization"] }
codespan-reporting = "0.11"
colored = "2.0.0"
criterion = "0.3"
crossbeam = "0.8.1"
crossbeam-channel = "0.5.6"
cryptonight-rs = { path = "consensus/cryptonight-rs" }
csv = "~1"
ctrlc = { version = "3.2.2", features = ["termination"] }
cucumber = { package = "cucumber_rust", version = "^0.6.0" }
darling = "0.10.2"
dashmap = "~5"
datatest-stable = "0.1.3"
derive_more = "0.99.14"
difference = "2.0.0"
dirs-next = "2.0.0"
dyn-clone = "1.0.8"
either = "~1"
elasticsearch = "8.5.0-alpha.1"
ethereum-types = "0.9"
starcoin-executor-benchmark = { path = "executor/benchmark" }
fnv = "1.0.6"
forkable-jellyfish-merkle = { path = "commons/forkable-jellyfish-merkle" }
fs_extra = "1.2.0"
futures = "0.3.12"
futures-channel = "0.3"
futures-core = "0.3.4"
futures-retry = "0.6"
futures-timer = "3.0"
futures-util = "~0.3"
git-version = "0.3.5"
governor = { version = "0.4.2", features = ["dashmap"] }
heck = "0.3.3"
hex = "0.4"
hmac = "0.12.1"
hyper = { version = "0.14.12", features = ["full"] }
include_dir = { version = "0.6.2", features = ["search"] }
indicatif = "0.16.2"
ip_network = "0.3.4"
io-lifetimes = "1.0.5"
itertools = "0.10.3"
jpst = "0.1.1"
jsonpath = "0.1.1"
jsonrpc-client-transports = "18"
jsonrpc-core = "18"
jsonrpc-core-client = "18"
jsonrpc-derive = "18"
openrpc-derive = { git = "https://github.com/starcoinorg/openrpc-rs", rev = "1f2f7d3495e3bd3ef3b6fcf7c4e0602cad090d5e", features = [
    "jsonrpc",
] }
openrpc-schema = { git = "https://github.com/starcoinorg/openrpc-rs", rev = "1f2f7d3495e3bd3ef3b6fcf7c4e0602cad090d5e" }

jsonrpc-http-server = "18"
jsonrpc-ipc-server = "18"
jsonrpc-pubsub = "18"
jsonrpc-server-utils = "18"
jsonrpc-tcp-server = "18"
jsonrpc-ws-server = "18"
lazy_static = "1.4.0"
libc = "^0.2"
libloading = "0.7.2"
libp2p = { version = "0.50.0", features = [
    "dns",
    "identify",
    "kad",
    "macros",
    "mdns",
    "mplex",
    "noise",
    "ping",
    "tcp",
    "tokio",
    "yamux",
    "websocket",
    "secp256k1",
] }
libp2p-core = { version = "0.50.0" }
libsecp256k1 = "0.7.1"
linked-hash-map = "0.5.6"
linked_hash_set = "0.1.3"
log = { version = "0.4.16" }
log4rs = { version = "1.2.0", features = ["background_rotation", "gzip"] }
lru = "0.7.8"
merkletree = { version = "0.22.1" }
mirai-annotations = "1.10.1"
move-binary-format = { git = "https://github.com/starcoinorg/move", rev = "babf994a38cda17b84186c7992f92fb3554347f0" }
move-bytecode-source-map = { git = "https://github.com/starcoinorg/move", rev = "babf994a38cda17b84186c7992f92fb3554347f0" }
move-bytecode-verifier = { git = "https://github.com/starcoinorg/move", rev = "babf994a38cda17b84186c7992f92fb3554347f0" }
move-cli = { git = "https://github.com/starcoinorg/move", rev = "babf994a38cda17b84186c7992f92fb3554347f0" }
move-command-line-common = { git = "https://github.com/starcoinorg/move", rev = "babf994a38cda17b84186c7992f92fb3554347f0" }
move-compiler = { git = "https://github.com/starcoinorg/move", rev = "babf994a38cda17b84186c7992f92fb3554347f0" }
move-core-types = { git = "https://github.com/starcoinorg/move", rev = "babf994a38cda17b84186c7992f92fb3554347f0" }
move-coverage = { git = "https://github.com/starcoinorg/move", rev = "babf994a38cda17b84186c7992f92fb3554347f0" }
move-disassembler = { git = "https://github.com/starcoinorg/move", rev = "babf994a38cda17b84186c7992f92fb3554347f0" }
move-docgen = { git = "https://github.com/starcoinorg/move", rev = "babf994a38cda17b84186c7992f92fb3554347f0" }
move-errmapgen = { git = "https://github.com/starcoinorg/move", rev = "babf994a38cda17b84186c7992f92fb3554347f0" }
move-ir-compiler = { git = "https://github.com/starcoinorg/move", rev = "babf994a38cda17b84186c7992f92fb3554347f0" }
move-ir-types = { git = "https://github.com/starcoinorg/move", rev = "babf994a38cda17b84186c7992f92fb3554347f0" }
move-model = { git = "https://github.com/starcoinorg/move", rev = "babf994a38cda17b84186c7992f92fb3554347f0" }
move-package = { git = "https://github.com/starcoinorg/move", rev = "babf994a38cda17b84186c7992f92fb3554347f0" }
move-prover = { git = "https://github.com/starcoinorg/move", rev = "babf994a38cda17b84186c7992f92fb3554347f0" }
move-prover-test-utils = { git = "https://github.com/starcoinorg/move", rev = "babf994a38cda17b84186c7992f92fb3554347f0" }
move-resource-viewer = { git = "https://github.com/starcoinorg/move", rev = "babf994a38cda17b84186c7992f92fb3554347f0" }
move-stdlib = { git = "https://github.com/starcoinorg/move", rev = "babf994a38cda17b84186c7992f92fb3554347f0" }
move-transactional-test-runner = { git = "https://github.com/starcoinorg/move", rev = "babf994a38cda17b84186c7992f92fb3554347f0" }
move-unit-test = { git = "https://github.com/starcoinorg/move", rev = "babf994a38cda17b84186c7992f92fb3554347f0", features = [
    "table-extension",
] }
move-vm-runtime = { git = "https://github.com/starcoinorg/move", rev = "babf994a38cda17b84186c7992f92fb3554347f0" }
move-vm-types = { git = "https://github.com/starcoinorg/move", rev = "babf994a38cda17b84186c7992f92fb3554347f0" }
move-table-extension = { git = "https://github.com/starcoinorg/move", rev = "babf994a38cda17b84186c7992f92fb3554347f0" }
move-vm-test-utils = { git = "https://github.com/starcoinorg/move", rev = "babf994a38cda17b84186c7992f92fb3554347f0", features = [
    "table-extension",
] }

names = { version = "0.14.0", default-features = false }
network-api = { path = "network/api", package = "network-api" }
network-p2p = { path = "network-p2p" }
network-p2p-types = { path = "network-p2p/types" }
network-p2p-core = { path = "network-p2p/core" }
network-p2p-derive = { path = "network-p2p/derive" }
network-types = { path = "network/types" }
num = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2"
num_cpus = "1.13"
num_enum = "0.5.7"
once_cell = "1.13.0"
ordinal = "0.3.1"
parity-tokio-ipc = "0.9"
parking_lot = "0.12.1"
pbkdf2 = "0.11"
petgraph = "0.5.1"
pin-project = "0.4.27"
pin-utils = "0.1.0"
pretty = "0.10.0"
proc-macro2 = "1.0"
prometheus = "0.13.0"
proptest = "1.0.0"
proptest-derive = "0.3.0"
quote = "1.0.16"
rand_0_7_3 = { package = "rand", version = "0.7.3" }
rand = "0.8.5"
rand_core = { version = "0.6.3", default-features = false }
rayon = "1.6.1"
regex = "1.6.0"
ripemd160 = "0.9.1"
rlp = "0.4"
rlp-derive = "0.1"
rocksdb = { default-features = false, features = ["lz4"], version = "0.21.0" }
rpassword = "~5"
rust-argon2 = "0.8"
rust-embed = "6.3.0"
rust-flatten-json = "0.2.0"
rustc-serialize = "^0.3"
rustyline = "9.1.2"
rustyline-derive = "0.6.0"
sc-peerset = { path = "network-p2p/peerset" }
schemars = { git = "https://github.com/starcoinorg/schemars", rev = "a64c6ddf7ca4796e090208b1476de2e53772042f" }
scmd = { path = "commons/scmd" }
serde = "1.0.130"
serde-generate = { git = "https://github.com/starcoinorg/serde-reflection", rev = "eb95fd4e3b67e08d71432b522c53833a0b855d80" }
serde-helpers = { path = "commons/serde-helpers" }
serde-reflection = { git = "https://github.com/starcoinorg/serde-reflection", rev = "eb95fd4e3b67e08d71432b522c53833a0b855d80" }
serde_bytes = "0.11"
serde_derive = "1.0"
serde_json = "~1"
serde_yaml = "0.8.26"
sha2 = "0.10.2"
sha3 = "0.9.1"
shell-words = "1.0.0"
simple-stopwatch = "0.1.4"
simplelog = "0.9.0"
slog = "2.7.0"
slog-async = "2.7.0"
slog-term = "2.9.0"
smallvec = "1.10.0"
sp-utils = { path = "commons/utils" }
starcoin-abi-decoder = { path = "abi/decoder" }
starcoin-abi-resolver = { path = "abi/resolver" }
starcoin-abi-types = { path = "abi/types" }
starcoin-account = { path = "account" }
starcoin-account-api = { path = "account/api" }
starcoin-account-provider = { path = "account/provider" }
starcoin-account-service = { path = "account/service" }
starcoin-accumulator = { path = "commons/accumulator", package = "starcoin-accumulator" }
starcoin-block-relayer = { path = "block-relayer" }
starcoin-chain = { path = "chain" }
starcoin-chain-api = { path = "chain/api" }
starcoin-chain-mock = { path = "chain/mock" }
starcoin-chain-notify = { path = "chain/chain-notify" }
starcoin-chain-service = { path = "chain/service" }
starcoin-cmd = { path = "cmd/starcoin" }
starcoin-config = { path = "config" }
starcoin-consensus = { path = "consensus" }
starcoin-crypto = { git = "https://github.com/starcoinorg/starcoin-crypto", rev = "bc3ca2138cf66d646f14a0f673ae5d853743f50a" }
starcoin-decrypt = { path = "commons/decrypt" }
starcoin-dev = { path = "vm/dev" }
starcoin-executor = { path = "executor" }
starcoin-framework = { git = "https://github.com/starcoinorg/starcoin-framework", rev = "198d236f071819257ebdf54ed4502099a7daaaf5" }
starcoin-genesis = { path = "genesis" }
starcoin-logger = { path = "commons/logger" }
starcoin-metrics = { path = "commons/metrics" }
starcoin-miner = { path = "miner" }
starcoin-miner-client = { path = "cmd/miner_client" }
starcoin-miner-client-api = { path = "cmd/miner_client/api" }
starcoin-move-compiler = { path = "vm/compiler" }
starcoin-move-explain = { path = "vm/move-explain" }
starcoin-gas-algebra-ext = { path = "vm/gas-algebra-ext" }
starcoin-gas = { path = "vm/starcoin-gas" }
starcoin-natives = { path = "vm/natives" }
starcoin-network = { path = "network" }
starcoin-network-rpc = { path = "network-rpc" }
starcoin-network-rpc-api = { path = "network-rpc/api" }
starcoin-node = { path = "node" }
starcoin-node-api = { path = "node/api" }
starcoin-open-block = { path = "chain/open-block" }
starcoin-force-upgrade = { path = "chain/force-upgrade" }
starcoin-resource-viewer = { path = "vm/resource-viewer" }
starcoin-rpc-api = { path = "rpc/api" }
starcoin-rpc-client = { path = "rpc/client" }
starcoin-rpc-middleware = { path = "rpc/middleware" }
starcoin-rpc-server = { path = "rpc/server" }
starcoin-service-registry = { path = "commons/service-registry" }
starcoin-state-api = { path = "state/api" }
starcoin-state-service = { path = "state/service" }
starcoin-state-store-api = { path = "state/state-store-api" }
starcoin-state-tree = { path = "state/state-tree" }
starcoin-statedb = { path = "state/statedb" }
starcoin-storage = { path = "storage" }
starcoin-stratum = { path = "stratum" }
starcoin-sync = { path = "sync" }
starcoin-sync-api = { path = "sync/api" }
starcoin-system = { path = "commons/system", package = "starcoin-system" }
starcoin-time-service = { path = "commons/time-service" }
starcoin-transaction-builder = { path = "vm/transaction-builder" }
starcoin-transactional-test-harness = { path = "vm/starcoin-transactional-test-harness" }
starcoin-txpool = { path = "txpool" }
starcoin-txpool-api = { path = "txpool/api" }
starcoin-txpool-mock-service = { path = "txpool/mock-service" }
starcoin-types = { path = "types" }
starcoin-uint = { path = "types/uint" }
starcoin-vm-runtime = { path = "vm/vm-runtime" }
starcoin-vm-types = { path = "vm/types" }
stdlib = { path = "vm/stdlib" }
stest = { path = "commons/stest" }
stest-macro = { path = "commons/stest/stest-macro" }
stream-task = { path = "commons/stream-task" }
starcoin-mvhashmap = { path = "vm/mvhashmap" }
starcoin-infallible = { path = "commons/infallible" }
starcoin-parallel-executor = { path = "vm/parallel-executor" }
starcoin-transaction-benchmarks = { path = "vm/transaction-benchmarks" }
starcoin-language-e2e-tests = { path = "vm/e2e-tests" }
starcoin-proptest-helpers = { path = "vm/proptest-helpers" }

starcoin-vm2-chain = { path = "vm2/chain" }
starcoin-vm2-genesis = { path = "vm2/genesis" }
starcoin-vm2-executor = { path = "vm2/executor" }
starcoin-vm2-test-helper = { path = "vm2/test-helper" }


starcoin-vm2-crypto = { git = "https://github.com/starcoinorg/starcoin-crypto", rev = "5417dce574142c3da24adf987194a6931869f588", package = "starcoin-crypto" }
starcoin-vm2-storage = { git = "https://github.com/starcoinorg/starcoin", rev = "df02c2025d036d3b00255378edeb3ea738934a1b", package = "starcoin-storage" }
starcoin-vm2-vm-runtime = { git = "https://github.com/starcoinorg/starcoin", rev = "df02c2025d036d3b00255378edeb3ea738934a1b", package = "starcoin-vm-runtime" }
starcoin-vm2-types = { git = "https://github.com/starcoinorg/starcoin", rev = "df02c2025d036d3b00255378edeb3ea738934a1b", package = "starcoin-types" }
starcoin-vm2-vm-types = { git = "https://github.com/starcoinorg/starcoin", rev = "df02c2025d036d3b00255378edeb3ea738934a1b", package = "starcoin-vm-types" }
starcoin-vm2-statedb = { git = "https://github.com/starcoinorg/starcoin", rev = "df02c2025d036d3b00255378edeb3ea738934a1b", package = "starcoin-statedb" }
starcoin-vm2-state-api = { git = "https://github.com/starcoinorg/starcoin", rev = "df02c2025d036d3b00255378edeb3ea738934a1b", package = "starcoin-state-api" }
starcoin-vm2-framework = { git = "https://github.com/starcoinorg/starcoin", rev = "df02c2025d036d3b00255378edeb3ea738934a1b", package = "starcoin-framework" }
starcoin-vm2-transaction-builder = { git = "https://github.com/starcoinorg/starcoin", rev = "df02c2025d036d3b00255378edeb3ea738934a1b", package = "starcoin-transaction-builder" }
starcoin-vm2-move-compiler = { git = "https://github.com/starcoinorg/starcoin", rev = "df02c2025d036d3b00255378edeb3ea738934a1b", package = "starcoin-move-compiler" }
starcoin-vm2-abi-decoder = { git = "https://github.com/starcoinorg/starcoin", rev = "df02c2025d036d3b00255378edeb3ea738934a1b", package = "starcoin-abi-decoder" }
starcoin-vm2-abi-types = { git = "https://github.com/starcoinorg/starcoin", rev = "df02c2025d036d3b00255378edeb3ea738934a1b", package = "starcoin-abi-types" }

move-vm2-core-types = { git = "https://github.com/starcoinorg/move", rev = "7c0ec30b6dd783cc0377b5b2c85650130028d3b5", package = "move-core-types" }
move-vm2-transactional-test-runner = { git = "https://github.com/starcoinorg/move", rev = "7c0ec30b6dd783cc0377b5b2c85650130028d3b5", package = "move-transactional-test-runner" }


syn = { version = "1.0.107", features = [
    "full",
    "extra-traits",
    "visit",
    "fold",
] }
sysinfo = "0.29.0"
tempfile = "3.2.0"
test-helper = { path = "test-helper" }
textwrap = "0.14.0"
thiserror = "1.0"
timeout-join-handler = { path = "commons/timeout-join-handler" }
tiny-keccak = { version = "2", features = ["keccak"] }
tiny_http = "0.8.2"
tokio = { version = "^1", features = ["full"] }
tokio-executor = { version = "0.2.0-alpha.6", features = ["blocking"] }
toml = "0.5.9"
trace-time = "0.1"
tracing = "0.1.34"
transaction-pool = "2.0.3"
uint = "0.9.3"
unsigned-varint = { version = "0.6.0", features = [
    "futures",
    "asynchronous_codec",
] }
vm = { package = "move-binary-format", git = "https://github.com/starcoinorg/move", rev = "babf994a38cda17b84186c7992f92fb3554347f0", features = [
    "fuzzing",
] }
vm-status-translator = { path = "vm/vm-status-translator" }
void = "1.0.2"
walkdir = "2.3.1"
wasm-timer = "0.2"
which = "4.1.0"
zeroize = "1.3.0"

[profile.release.package]
starcoin-service-registry.debug = 1
starcoin-chain.debug = 1
starcoin-consensus.debug = 1
starcoin-miner.debug = 1
starcoin-network.debug = 1
network-p2p.debug = 1
starcoin-network-rpc.debug = 1
starcoin-node.debug = 1
starcoin-storage.debug = 1
starcoin-sync.debug = 1
starcoin-txpool.debug = 1
starcoin-executor.debug = 1
starcoin-genesis.debug = 1
starcoin-vm-runtime.debug = 1

[profile.release.package."*"]
debug = false

#[profile.release.package.cryptonight-rs]
#opt-level = 2

[patch.crates-io]
x25519-dalek = { git = "https://github.com/aptos-labs/x25519-dalek", branch = "zeroize_v1" }
merlin = { git = "https://github.com/aptos-labs/merlin" }
