[package]
authors = ["Starcoin Core Dev <dev@starcoin.org>"]
edition = "2021"
license = "Apache-2.0"
name = "starcoin-account"
publish = false
version = "1.12.9"

[dependencies]
anyhow = "1.0.41"
async-trait = "0.1"
bcs-ext = {package = "bcs-ext", path = "../commons/bcs_ext"}
futures = "0.3.12"
parking_lot = "0.12"
rand = "0.8.5"
rand_core = {version = "0.6.3", default-features = false}
serde = "1.0.130"
serde_json = "~1"
starcoin-account-api = {path = "./api"}
starcoin-config = {path = "../config"}
starcoin-crypto = {git = "https://github.com/starcoinorg/starcoin-crypto", rev = "d871dfb4216f034ee334a575926c101574d9d6dc"}
starcoin-decrypt = {path = "../commons/decrypt"}
starcoin-logger = {path = "../commons/logger"}
starcoin-storage = {path = "../storage"}
starcoin-types = {path = "../types"}

[dev-dependencies]
hex = "0.4.3"
tempfile = "3"
