[package]
name = "starcoin-account"
version = "1.12.9"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bcs-ext = { workspace = true }
futures = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
starcoin-account-api = { workspace = true }
starcoin-config = { workspace = true }
starcoin-crypto = { workspace = true }
starcoin-decrypt = { workspace = true }
starcoin-logger = { workspace = true }
starcoin-storage = { workspace = true }
starcoin-types = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
tempfile = { workspace = true }
