[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bcs-ext = { package = "bcs-ext", workspace = true }
futures = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
rand_core = { default-features = false, workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
starcoin-account-api = { workspace = true }
starcoin-config = { workspace = true }
starcoin-crypto = { workspace = true }
starcoin-decrypt = { workspace = true }
starcoin-logger = { workspace = true }
starcoin-storage = { workspace = true }
starcoin-types = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
tempfile = { workspace = true }

[package]
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
name = "starcoin-account"
publish = { workspace = true }
version = "1.13.12-alpha"
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
