[package]
name = "benchmarks"
version = "1.12.9"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
criterion = { workspace = true }
futures = { workspace = true }
futures-timer = { workspace = true }

parking_lot = { workspace = true }
proptest = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
crypto = { workspace = true }
starcoin-executor-benchmark = { workspace = true }
forkable-jellyfish-merkle = { workspace = true }
starcoin-account-api = { workspace = true }
starcoin-accumulator = { workspace = true }
starcoin-chain = { workspace = true }
starcoin-config = { workspace = true }
starcoin-consensus = { workspace = true }
starcoin-executor = { workspace = true }
starcoin-genesis = { workspace = true }
starcoin-network-api = { workspace = true }
starcoin-logger = { workspace = true }
starcoin-service-registry = { workspace = true }
starcoin-state-store-api = { workspace = true }
starcoin-state-tree = { workspace = true }
starcoin-storage = { workspace = true }
starcoin-transaction-builder = { workspace = true }
starcoin-vm-runtime = { workspace = true }
starcoin-vm-types = { workspace = true }
types = { workspace = true }

[target."cfg(target_os=\"linux\")".dependencies]
pprof = { workspace = true }

[dev-dependencies]

# see https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
[lib]
bench = false

[[bench]]
harness = false
name = "bench_storage"

[[bench]]
harness = false
name = "bench_chain"

[[bench]]
harness = false
name = "bench_state_tree"

[[bench]]
harness = false
name = "bench_vm"
