[package]
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
name = "benchmarks"
publish = { workspace = true }
version = "1.13.7"
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }


[dependencies]
anyhow = { workspace = true }
criterion = { workspace = true }
starcoin-crypto = { package = "starcoin-crypto", workspace = true }
forkable-jellyfish-merkle = { workspace = true }
futures = { workspace = true }
futures-timer = { workspace = true }
starcoin-logger = { package = "starcoin-logger", workspace = true }
parking_lot = { workspace = true }
proptest = { workspace = true }
rand = { workspace = true }
rand_core = { default-features = false, workspace = true }
starcoin-account-api = { workspace = true }
starcoin-accumulator = { package = "starcoin-accumulator", workspace = true }
starcoin-chain = { workspace = true }
starcoin-config = { workspace = true }
starcoin-consensus = { workspace = true }
starcoin-executor = { package = "starcoin-executor", workspace = true }
starcoin-genesis = { workspace = true }
network-api = { workspace = true }
starcoin-service-registry = { workspace = true }
starcoin-state-store-api = { workspace = true }
starcoin-state-tree = { workspace = true }
starcoin-storage = { workspace = true }
starcoin-transaction-builder = { workspace = true }
starcoin-vm-runtime = { workspace = true }
starcoin-vm-types = { workspace = true }
starcoin-types = { workspace = true }
starcoin-executor-benchmark = { workspace = true }
starcoin-schemadb = { workspace = true }

[dev-dependencies]

[lib]
bench = false

[[bench]]
harness = false
name = "bench_storage"

[[bench]]
harness = false
name = "bench_chain"

[[bench]]
harness = false
name = "bench_state_tree"

[[bench]]
harness = false
name = "bench_vm"

[target."cfg(target_os=\"linux\")".dependencies]
pprof = { version = "0.10", features = ["flamegraph", "criterion"] }