[package]
name = "starcoin-block-relayer"
version = "1.12.9"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bcs-ext = { workspace = true }
futures = { workspace = true }
network-api = { workspace = true }
starcoin-chain = { workspace = true }
starcoin-chain-api = { workspace = true }
starcoin-metrics = { workspace = true }
starcoin-network = { workspace = true }
starcoin-network-rpc-api = { workspace = true }
starcoin-service-registry = { workspace = true }
starcoin-sync = { workspace = true }
starcoin-sync-api = { workspace = true }
starcoin-time-service = { workspace = true }
starcoin-txpool = { workspace = true }
starcoin-txpool-api = { workspace = true }
starcoin-types = { workspace = true }
starcoin-config = { workspace = true }
starcoin-crypto = { workspace = true }
starcoin-logger = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
stest = { workspace = true }
tokio = { workspace = true }
