[package]
name = "starcoin-bus"
version = "0.1.0"
authors = ["Starcoin Core Dev <dev@starcoin.org>"]
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0"
futures = "0.3"
actix = "0.9"
actix-rt = "1.0"
tokio = { version = "0.2", features = ["full"] }
async-trait = "0.1"
starcoin-logger = {path = "../commons/logger"}
stest = {path = "../commons/stest"}

[dev-dependencies]
