[package]
name = "starcoin-bus"
version = "0.4.3"
authors = ["Starcoin Core Dev <dev@starcoin.org>"]
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0"
futures = "0.3"
actix = "0.10.0-alpha.3"
actix-rt = "1.1"
tokio = { version = "0.2", features = ["full"] }
async-trait = "0.1"
starcoin-logger = {path = "../commons/logger"}
stest = {path = "../commons/stest"}
async-std = "1.5"

[dev-dependencies]
