[dependencies]
anyhow = { workspace = true }
bcs-ext = { workspace = true }
clap = { features = ["derive"], workspace = true }
starcoin-crypto = { workspace = true }
starcoin-logger = { workspace = true }
proptest = { features = ["std"], optional = true, workspace = true }
proptest-derive = { optional = true, workspace = true }
rand = { workspace = true }
rand_core = { default-features = false, workspace = true }
sp-utils = { workspace = true }
starcoin-accumulator = { workspace = true }
starcoin-consensus = { workspace = true }
starcoin-chain-api = { workspace = true }
starcoin-config = { workspace = true }
starcoin-executor = { workspace = true }
starcoin-open-block = { workspace = true }
starcoin-service-registry = { workspace = true }
starcoin-state-api = { workspace = true }
starcoin-statedb = { workspace = true }
starcoin-time-service = { workspace = true }
starcoin-types = { workspace = true }
starcoin-vm-types = { workspace = true }
starcoin-vm-runtime = { workspace = true, optional = true }
starcoin-force-upgrade = { workspace = true }
starcoin-storage = { workspace = true }
thiserror = { workspace = true }
starcoin-network-rpc-api = { workspace = true }
async-std = { workspace = true }
starcoin-dag = { workspace = true }
once_cell = { workspace = true }
serde_json = { features = ["arbitrary_precision"], workspace = true }

[dev-dependencies]
proptest = { workspace = true }
proptest-derive = { workspace = true }
starcoin-account-api = { workspace = true }
starcoin-chain-mock = { workspace = true }
starcoin-genesis = { workspace = true }
starcoin-resource-viewer = { workspace = true }
starcoin-transaction-builder = { workspace = true }
starcoin-types = { features = ["fuzzing"], workspace = true }
starcoin-vm-runtime = { workspace = true }
stdlib = { workspace = true }
stest = { workspace = true }
test-helper = { workspace = true }
tokio = { features = ["full"], workspace = true }
starcoin-network-rpc-api = { workspace = true }
starcoin-force-upgrade = { workspace = true }

[features]
default = []
fuzzing = ["proptest", "proptest-derive", "starcoin-types/fuzzing"]
force-deploy = ["starcoin-force-upgrade/force-deploy", "starcoin-executor/force-deploy"]

[package]
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
name = "starcoin-chain"
publish = { workspace = true }
version = "2.0.2"
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
