[dependencies]
anyhow = { workspace = true }
bcs-ext = { workspace = true }
clap = { features = ["derive"], workspace = true }
starcoin-crypto = { workspace = true }
starcoin-logger = { workspace = true }
proptest = { optional = true, workspace = true }
proptest-derive = { optional = true, workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
sp-utils = { workspace = true }
starcoin-accumulator = { workspace = true }
starcoin-consensus = { workspace = true }
starcoin-chain-api = { workspace = true }
starcoin-config = { workspace = true }
starcoin-executor = { workspace = true }
starcoin-open-block = { workspace = true }
starcoin-service-registry = { workspace = true }
starcoin-state-api = { workspace = true }
starcoin-statedb = { workspace = true }
starcoin-time-service = { workspace = true }
starcoin-types = { workspace = true }
starcoin-vm-types = { workspace = true }
starcoin-vm-runtime = { workspace = true }
starcoin-storage = { workspace = true }
starcoin-dag = { workspace = true }
thiserror = { workspace = true }
once_cell = { workspace = true }
serde_json = { features = ["arbitrary_precision"], workspace = true }
starcoin-data-migration = { workspace = true }

# dependencies for move2
starcoin-vm2-statedb = { workspace = true }
starcoin-vm2-types = { workspace = true }
starcoin-vm2-chain = { workspace = true }
starcoin-vm2-vm-types = { workspace = true }
starcoin-vm2-state-api = { workspace = true }
log = "0.4.27"

[dev-dependencies]
proptest = { workspace = true }
proptest-derive = { workspace = true }
starcoin-account-api = { workspace = true }
starcoin-chain-mock = { workspace = true }
starcoin-genesis = { workspace = true }
starcoin-transaction-builder = { workspace = true }
starcoin-types = { features = [
    "fuzzing",
], workspace = true }
stest = { workspace = true }
test-helper = { workspace = true }
starcoin-vm2-test-helper = { workspace = true }
starcoin-vm2-state-api = { workspace = true }
starcoin-vm2-crypto = { workspace = true }

tempfile = "3.21.0"
flate2 = "1.0"
tar = "0.4"

[features]
default = []
fuzzing = ["proptest", "proptest-derive", "starcoin-types/fuzzing"]

[package]
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
name = "starcoin-chain"
publish = { workspace = true }
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
