[dependencies]
anyhow = { workspace = true }
starcoin-types = { workspace = true }
starcoin-crypto = { workspace = true }
starcoin-consensus = { workspace = true }
starcoin-chain-api = { workspace = true }
[package]
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
name = "starcoin-compressed-proof"
publish = { workspace = true }
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
