[package]
authors = ["Starcoin Core Dev <dev@starcoin.org>"]
edition = "2021"
license = "Apache-2.0"
name = "starcoin-config"
publish = false
version = "1.12.5"

[dependencies]
anyhow = "1.0.41"
clap = {version = "4", features = ["derive", "cargo"]}
dirs-next = "2.0.0"
git-version = "0.3.5"
hex = "0.4.3"
libc = "^0.2"
names = {version = "0.14.0", default-features = false}
network-api = {path = "../network/api", package = "network-api"}
network-p2p-types = {path = "../network-p2p/types"}
network-types = {path = "../network/types"}
num_cpus = "1.13"
num_enum = "0.5.7"
once_cell = "1.13.0"
parking_lot = "0.12.1"
rand = "0.8.5"
rand_core = {version = "0.6.3", default-features = false}
schemars = {git = "https://github.com/starcoinorg/schemars", rev = "6972da92f4360e1779168bb3fe0274c521d324e2"}
serde = {version = "1.0.130", features = ["derive"]}
serde_json = {version = "1.0", features = ["arbitrary_precision"]}
starcoin-account-api = {path = "../account/api"}
starcoin-crypto = {git = "https://github.com/starcoinorg/starcoin-crypto", rev = "d871dfb4216f034ee334a575926c101574d9d6dc"}
starcoin-logger = {path = "../commons/logger", package = "starcoin-logger"}
starcoin-metrics = {path = "../commons/metrics"}
starcoin-system = {path = "../commons/system", package = "starcoin-system"}
starcoin-time-service = {path = "../commons/time-service"}
starcoin-types = {path = "../types"}
starcoin-uint = {path = "../types/uint"}
starcoin-vm-types = {path = "../vm/types"}
stdlib = {path = "../vm/stdlib"}
tempfile = "3.2.0"
thiserror = "1.0"
toml = {version = "0.5.9", default-features = false}
